# oddf

./: .clang-format  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
examples/playground/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
lib/oddf/: CMakeLists.txt
lib/oddf/include/oddf/: Simulator.h
lib/oddf/include/oddf/design/backend/: IBlockInput.h  IBlockOutput.h  IDesign.h  IDesignBlock.h
lib/oddf/include/oddf/simulation/backend/: BlockInput.h  BlockOutput.h  GenericSimulatorBlockFactory.h  IBlockMapping.h  SimulatorBlockBase.h  SimulatorBlockFactoryBase.h
lib/oddf/include/oddf/utility/: CollectionView.h  ConstIterator.h  ContainerViewFactory.h  ContainerViews.h  GenericConstEnumerable.h  ICollectionViewImplementation.h  IConstEnumerable.h  IConstEnumerator.h  IConstIteratorImplementation.h  IIteratorImplementation.h  IListViewImplementation.h  Iterator.h  ListView.h
lib/oddf/src/: NOTES.txt  block_base.cpp  block_base.h  bus.h  debug.cpp  debug.h  design.cpp  dfx.h  dfx_core.h  enabled_scope.h  formatting.cpp  formatting.h  global.h  hash_combine.h  hierarchy.cpp  hierarchy.h  inout.h  messages.cpp  messages.h  node.h  simulator.cpp  simulator.h  simulator_optimisations.h  type_support.h  types.cpp  types.h
lib/oddf/src/_new/: Simulator.cpp
lib/oddf/src/_new/simulation/backend/: BlockInput.cpp  BlockOutput.cpp  SimulatorBlockBase.cpp
lib/oddf/src/_new/simulation/internal/: SimulatorImpl.cpp  SimulatorImpl.h
lib/oddf/src/_new/simulation/internal/SimulatorImpl/: RegisterDefaultBlockFactories.cpp
lib/oddf/src/_new/simulation/internal/blocks/: Delay.cpp  Delay.h
lib/oddf/src/blocks/: bit_compose.cpp  bit_compose.h  bit_compose_dynfix.cpp  bit_extract.cpp  bit_extract.h  bit_extract_dynfix.cpp  constant.cpp  constant.h  convergent_cast.cpp  convergent_cast.h  decide.cpp  decide.h  decide_dynfix.cpp  delay.cpp  delay.h  floor_cast.cpp  floor_cast.h  function.h  label.cpp  label.h  memory.cpp  memory.h  modulo.cpp  modulo.h  modulo_dynfix.cpp  nearest_cast.cpp  nearest_cast.h  operators_flat.cpp  operators_flat.h  operators_flat_dynfix_plus.cpp  operators_flat_dynfix_times.cpp  operators_relational.cpp  operators_relational.h  operators_relational_dynfix.cpp  operators_unary.cpp  operators_unary.h  operators_unary_dynfix.cpp  power_of_two.cpp  power_of_two.h  probe.cpp  (+16 more)
lib/oddf/src/configuration/: configuration.h  configuration_access.cpp  configuration_access.h  configuration_namespace.cpp  configuration_section.h
lib/oddf/src/generator/: generator.cpp  generator.h  generator_instances.cpp  generator_port_naming.cpp  generator_port_placing.cpp  properties.cpp  properties.h
lib/oddf/src/helpers/: h_bit_extract.cpp  h_bit_extract.h
lib/oddf/src/modules/: fifo.h  logger.cpp  logger.h  recorder.cpp  recorder.h  register_file.cpp  register_file.h  serial_configuration.h  serial_configuration_builder.cpp  serial_configuration_controller.cpp  sink.cpp  sink.h  source.cpp  source.h  throttled_source.cpp  throttled_source.h
lib/verilog/: CMakeLists.txt  global.h  verilog.cpp  verilog.h
lib/verilog/entities/: add.cpp  bit_compose.cpp  bit_extract.cpp  checker.cpp  compare.cpp  constant.cpp  decide.cpp  default.cpp  delay.cpp  entities.h  floor_cast.cpp  ignore.cpp  input_port.cpp  instance.cpp  logic.cpp  memory_dp.cpp  mul.cpp  negate.cpp  not.cpp  output_port.cpp  recorder.cpp  reinterpret_cast.cpp  select.cpp  spare.cpp  stimulus.cpp
